--- a/HelloWorldTensorflowRegression.ipynb
+++ b/HelloWorldTensorflowRegression.ipynb
@@ -651,18 +651,22 @@
     "plt.xlabel('Epoch Number')\n",
     "plt.ylabel(\"Loss Magnitude\")\n",
     "plt.title(\"Simple Model\")\n",
+    "plt.xlim([0, 100])\n",
     "\n",
     "plt.subplot(1,3,2)\n",
     "plt.plot(history_complex.history['loss'])\n",
     "plt.xlabel('Epoch Number')\n",
     "plt.ylabel(\"Loss Magnitude\")\n",
     "plt.title(\"Complex Model\")\n",
+    "plt.xlim([0, 100])\n",
     "\n",
     "plt.subplot(1,3,3)\n",
     "plt.plot(history_simple_normalized.history['loss'])\n",
     "plt.xlabel('Epoch Number')\n",
     "plt.ylabel(\"Loss Magnitude\")\n",
     "plt.title(\"Normalized Model\")\n",
+    "plt.xlim([0, 100])\n",
+    "\n",
     "plt.show()"
    ]
   }
