small fix outputs

--- a/HelloWorldTensorflowRegression.ipynb
+++ b/HelloWorldTensorflowRegression.ipynb
@@ -476,6 +476,34 @@
     "plt.xlabel('Epoch Number')\n",
     "plt.ylabel(\"Loss Magnitude\")\n",
     "plt.title(\"Simple Model\")\n",
+    "\n",
+    "plt.subplot(1,3,2)\n",
+    "plt.plot(history_complex.history['loss'])\n",
+    "plt.xlabel('Epoch Number')\n",
+    "plt.ylabel(\"Loss Magnitude\")\n",
+    "plt.title(\"Complex Model\")\n",
+    "\n",
+    "plt.subplot(1,3,3)\n",
+    "plt.plot(history_simple_normalized.history['loss'])\n",
+    "plt.xlabel('Epoch Number')\n",
+    "plt.ylabel(\"Loss Magnitude\")\n",
+    "plt.title(\"Normalized Model\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(4)\n",
+    "plt.subplot(1,3,1)\n",
+    "plt.plot(history_simple.history['loss'])\n",
+    "plt.xlabel('Epoch Number')\n",
+    "plt.ylabel(\"Loss Magnitude\")\n",
+    "plt.title(\"Simple Model\")\n",
     "plt.xlim([0, 100])\n",
     "plt.ylim([0, 100])\n",
     "\n",
@@ -492,7 +520,7 @@
     "plt.xlabel('Epoch Number')\n",
     "plt.ylabel(\"Loss Magnitude\")\n",
     "plt.title(\"Normalized Model\")\n",
-    "plt.xlim([0, 100])\n",
+    "plt.xlim([0, 2])\n",
     "plt.ylim([0, 100])\n",
     "\n",
     "plt.show()"
