--- a/Python/HelloWorldPython.ipynb
+++ b/Python/HelloWorldPython.ipynb
@@ -12,11 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "kLTfsSjLyqEh"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Esta célula é de código\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Esta célula é de código\")\n",
     "# Esta linha está comentada"
@@ -43,11 +51,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "XoLwTUMj3lUk"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c= 3\n",
+      "<class 'int'>\n",
+      "e= 1.1\n",
+      "<class 'float'>\n"
+     ]
+    }
+   ],
    "source": [
     "a=1\n",
     "b=2\n",
@@ -396,7 +415,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -410,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
