--- a/DeepLearning/6HelloWorldTensorflowRegressionNormalization.ipynb
+++ b/DeepLearning/6HelloWorldTensorflowRegressionNormalization.ipynb
@@ -31,6 +31,7 @@
     "from matplotlib import cm\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
+    "import tensorflow.keras as tf_keras\n",
     "\n",
     "print(\"Tensorflow {}\".format(tf.__version__))\n",
     "EPOCHS = 750\n",
@@ -103,7 +104,7 @@
    },
    "outputs": [],
    "source": [
-    "class BatchLossHistory(tf.keras.callbacks.Callback):\n",
+    "class BatchLossHistory(tf_keras.callbacks.Callback):\n",
     "    def on_train_begin(self, logs={}):\n",
     "        self.batch_losses = []\n",
     "        self.batch_weights = []\n",
@@ -139,9 +140,9 @@
    },
    "outputs": [],
    "source": [
-    "l0 = tf.keras.layers.Dense(units=1, input_shape=[1])\n",
-    "model = tf.keras.Sequential([l0])\n",
-    "model.compile(loss='mean_squared_error', optimizer=tf.keras.optimizers.Adam(0.1))\n",
+    "l0 = tf_keras.layers.Dense(units=1, input_shape=[1])\n",
+    "model = tf_keras.Sequential([l0])\n",
+    "model.compile(loss='mean_squared_error', optimizer=tf_keras.optimizers.Adam(0.1))\n",
     "l0_weights_init = l0.get_weights()\n",
     "print(\"Simple Model - layer variables init: {}\".format(l0_weights_init))"
    ]
@@ -253,11 +254,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l0 = tf.keras.layers.Dense(units=4, input_shape=[1])\n",
-    "l1 = tf.keras.layers.Dense(units=4)\n",
-    "l2 = tf.keras.layers.Dense(units=1)\n",
-    "model = tf.keras.Sequential([l0, l1, l2])\n",
-    "model.compile(loss='mean_squared_error', optimizer=tf.keras.optimizers.Adam(0.1))"
+    "l0 = tf_keras.layers.Dense(units=4, input_shape=[1])\n",
+    "l1 = tf_keras.layers.Dense(units=4)\n",
+    "l2 = tf_keras.layers.Dense(units=1)\n",
+    "model = tf_keras.Sequential([l0, l1, l2])\n",
+    "model.compile(loss='mean_squared_error', optimizer=tf_keras.optimizers.Adam(0.1))"
    ]
   },
   {
@@ -547,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
