--- a/DeepLearning/1.3HelloWorldTensorflowMobilenetImagenetInference.ipynb
+++ b/DeepLearning/1.3HelloWorldTensorflowMobilenetImagenetInference.ipynb
@@ -27,6 +27,7 @@
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
+    "import tensorflow.keras as tf_keras\n",
     "import numpy as np\n",
     "import PIL.Image as PImage\n",
     "import matplotlib.pyplot as plt\n",
@@ -51,7 +52,7 @@
    },
    "outputs": [],
    "source": [
-    "model = tf.keras.applications.mobilenet_v2.MobileNetV2(weights='imagenet')\n",
+    "model = tf_keras.applications.mobilenet_v2.MobileNetV2(weights='imagenet')\n",
     "model.summary()"
    ]
   },
@@ -72,13 +73,13 @@
    },
    "outputs": [],
    "source": [
-    "labels_path = tf.keras.utils.get_file('ImageNetLabels.txt','https://storage.googleapis.com/download.tensorflow.org/data/ImageNetLabels.txt')\n",
+    "labels_path = tf_keras.utils.get_file('ImageNetLabels.txt','https://storage.googleapis.com/download.tensorflow.org/data/ImageNetLabels.txt')\n",
     "imagenet_labels = np.array(open(labels_path).read().splitlines())\n",
     "\n",
-    "image_path  = tf.keras.utils.get_file('grace_hopper.jpg',  'https://storage.googleapis.com/download.tensorflow.org/example_images/grace_hopper.jpg')\n",
+    "image_path  = tf_keras.utils.get_file('grace_hopper.jpg',  'https://storage.googleapis.com/download.tensorflow.org/example_images/grace_hopper.jpg')\n",
     "image1 = PImage.open(image_path).resize((IMAGE_RES, IMAGE_RES))\n",
-    "image_path  = tf.keras.utils.get_file('STOP.jpg',  'https://upload.wikimedia.org/wikipedia/commons/f/f9/STOP_sign.jpg')\n",
-    "image2 = PImage.open(\"STOP.jpg\").resize((IMAGE_RES, IMAGE_RES))\n",
+    "image_path  = tf_keras.utils.get_file('STOP.jpg',  'https://upload.wikimedia.org/wikipedia/commons/f/f9/STOP_sign.jpg')\n",
+    "image2 = PImage.open(image_path).resize((IMAGE_RES, IMAGE_RES))\n",
     "\n",
     "plt.subplot(1,2,1)\n",
     "plt.imshow(image1)\n",
@@ -185,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
